# agentic_cheque_ocr

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  __init__.py  api-requirements.txt  cli_client.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  streamlit-requirements.txt  streamlit_app.py
api/: app.py  schemas.py  utils.py
config/: settings.py
logger/: __init__.py  json_logger.py  logger.py  logger_config.json
src/llm/: __init__.py  base.py  ollama_provider.py  openai_provider.py  vllm_provider.py
src/ocr/: __init__.py  base.py  easyocr.py  glm_ocr.py  layoutreader_helpers.py  tesseract.py
src/schema/: cheque.py
src/workflow/: __init__.py  graph.py  nodes.py  prompt.py  state.py
