[project]
name = "agentic-cheque-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "pillow>=10.0.0",
    "pydantic>=2.0",
    "pytesseract>=0.3.10",
    "python-dotenv>=1.0.0",
    "transformers>=4.0.0",
    "torch>=2.0.0",
]

[tool.uv]
dev-dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
